Implemented Post Detail with constraint layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.LolaInstagram"
         tools:targetApi="31">
         <activity
+            android:name=".activities.PostDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.FeedActivity"
             android:exported="false" />
 
