--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,12 +5,14 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <queries>
-    <!-- Camera -->
-    <intent>
-        <action android:name="android.media.action.IMAGE_CAPTURE" />
-    </intent>
-</queries>
+
+        <!-- Camera -->
+        <intent>
+            <action android:name="android.media.action.IMAGE_CAPTURE" />
+        </intent>
+    </queries>
 
     <application
         android:name=".ParseApplication"
@@ -23,6 +25,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LolaInstagram"
         tools:targetApi="31">
+        <activity
+            android:name=".activities.SignUpActivity"
+            android:exported="false" />
         <activity
             android:name=".activities.CommentActivity"
             android:exported="false" />
